# limitless-optcg-scrapper

./: README.md  pyproject.toml
src/: collection.v3.json
src/opcg-scrapper/: app.py  models.py
src/project_name/: app.py  models.py
